{
    "name": "New Controls",
    "maps": [
        {
            "name": "Fly",
            "id": "d91f24af-4a3c-45c5-91e4-41c9dc1b99d4",
            "actions": [
                {
                    "name": "Translation",
                    "type": "Value",
                    "id": "660917db-e540-4290-9c72-5bcf24c98248",
                    "expectedControlType": "Vector3",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Rotation",
                    "type": "Value",
                    "id": "d59043be-f20e-49f2-a309-1665a963cdca",
                    "expectedControlType": "Vector3",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "Keyboard Combination",
                    "id": "11e7bdc4-7c1a-4165-9c9b-196445007f2f",
                    "path": "3DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Translation",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "b4e08bd7-826e-4a88-af1a-1cf3d5ac4505",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Translation",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "39fbd4e4-879c-4f66-b29b-05de8f655729",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Translation",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "02bb147b-9854-4278-a9b5-7d03db05de8d",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Translation",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "a8f8258a-ad7f-4f1c-b9c8-44d0390b6100",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Translation",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "forward",
                    "id": "b7bde10a-b80d-4277-bf56-22cd6ca4ce9a",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Translation",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "backward",
                    "id": "84302a6b-9c8e-472a-a888-37e9b0d8947b",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Translation",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "b243ffe9-3fe8-4b60-9355-3977647f1eaf",
                    "path": "<SpaceNavigatorHID>/translation",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Translation",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "Keyboard Combination",
                    "id": "9cbf5ac0-2fa7-4840-94f5-f2b94ec75e72",
                    "path": "Vector3",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotation",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "modifier",
                    "id": "1c4a6c7a-1049-4aa0-8c19-3deaa72c5b41",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotation",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "up",
                    "id": "ec960dc4-9115-410f-ab2a-5bdfa2467012",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotation",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "1591adee-f690-42e4-bb3d-b8102016e189",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotation",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "1a9f0002-6d8f-4556-abdf-8ba5a2d5f484",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotation",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "a65cff33-9c52-4f5e-b9ad-05398aa56df1",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotation",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "forward",
                    "id": "8e6abc43-63f7-43b5-bd48-24f2f85acc20",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotation",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "back",
                    "id": "5e184e73-9ffc-412f-99c1-1c1dd8f93941",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotation",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "upDown",
                    "id": "4e09a6b1-819d-4689-8fd2-2fe4549bd03f",
                    "path": "<Mouse>/delta/x",
                    "interactions": "",
                    "processors": "Scale(factor=0.05)",
                    "groups": "",
                    "action": "Rotation",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "leftRight",
                    "id": "e0a3b8c2-6428-4004-8496-b96ea878e28c",
                    "path": "<Mouse>/delta/y",
                    "interactions": "",
                    "processors": "Scale(factor=-0.05)",
                    "groups": "",
                    "action": "Rotation",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "forwardBack",
                    "id": "c995ec4d-21f2-4f7f-b4ac-b14afa464872",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotation",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "40675e28-63dc-4d25-8e0b-10bbeffece1b",
                    "path": "<SpaceNavigatorHID>/rotation",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotation",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}